--- a/dangky.html
+++ b/dangky.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/assets/css/signup.css">
-    <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/access/css/signup.css">
+    <link rel="stylesheet" href="/access/css/login.css">
     <title>Sign up - Spotify</title>
 </head>
 
@@ -56,7 +56,7 @@
             </div>
         </div>
     </section>
-    <script src="/assets/js/signup.js"></script>
+    <script src="/access/js/signup.js"></script>
 </body>
 
 </html>
